Use EXPECT_DEATH_LOG_TO_STDERR which appears to work with assertion messages.
Signed-off-by: Joshua Marantz <jmarantz@google.com>

--- a/test/test_common/BUILD
+++ b/test/test_common/BUILD
@@ -201,5 +201,6 @@ envoy_cc_test(
     deps = [
         ":simulated_time_system_lib",
         ":test_time_lib",
+        ":utility_lib",
     ],
 )
