circleci: Try build Docker images with docker image
Signed-off-by: Jamie Hewland <jhewland@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,8 @@ jobs:
            path: /build/envoy/generated
            destination: /
    docker:
-     executor: ubuntu-build
+     docker:
+       - image: docker
      steps:
        - attach_workspace:
            at: .
