circleci: docker: Add repo checkout
Signed-off-by: Jamie Hewland <jhewland@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,8 @@ jobs:
      docker:
        - image: docker
      steps:
+       - run: rm -rf /home/circleci/project/.git # CircleCI git caching is likely broken
+       - checkout
        - attach_workspace:
            at: .
        - setup_remote_docker
