--- a/source/extensions/transport_sockets/tap/BUILD
+++ b/source/extensions/transport_sockets/tap/BUILD
@@ -20,6 +20,18 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "tap_config_impl",
+    srcs = ["tap_config_impl.cc"],
+    hdrs = ["tap_config_impl.h"],
+    deps = [
+        ":tap_config_interface",
+        "//source/common/network:utility_lib",
+        "//source/extensions/common/tap:tap_config_base",
+        "@envoy_api//envoy/data/tap/v2alpha:wrapper_cc",
+    ],
+)
+
+envoy_cc_library(
     name = "tap_lib",
     srcs = ["tap.cc"],
     hdrs = ["tap.h"],
@@ -27,13 +39,8 @@ envoy_cc_library(
         ":tap_config_interface",
         "//include/envoy/network:transport_socket_interface",
         "//source/common/buffer:buffer_lib",
-        "//source/common/common:assert_lib",
-        "//source/common/network:utility_lib",
-        "//source/common/protobuf",
         "//source/extensions/common/tap:extension_config_base",
-        "//source/extensions/common/tap:tap_config_base",
         "@envoy_api//envoy/config/transport_socket/tap/v2alpha:tap_cc",
-        "@envoy_api//envoy/data/tap/v2alpha:wrapper_cc",
     ],
 )
 
@@ -42,6 +49,7 @@ envoy_cc_library(
     srcs = ["config.cc"],
     hdrs = ["config.h"],
     deps = [
+        ":tap_config_impl",
         ":tap_lib",
         "//include/envoy/network:transport_socket_interface",
         "//include/envoy/registry",
