--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,7 @@ jobs:
      steps:
        - run: rm -rf /home/circleci/project/.git # CircleCI git caching is likely broken
        - checkout
-       - run:
-           command:
-             ci/do_circle_ci.sh bazel.release
-           no_output_timeout: 60m
+       - run: ci/do_circle_ci.sh bazel.release
        - setup_remote_docker
        - run: ci/docker_push.sh
        - run: ci/docker_tag.sh
@@ -99,10 +96,7 @@ jobs:
      steps:
        - run: rm -rf /home/circleci/project/.git # CircleCI git caching is likely broken
        - checkout
-       - run:
-           command:
-             ci/do_circle_ci.sh bazel.coverage
-           no_output_timeout: 60m
+       - run: ci/do_circle_ci.sh bazel.coverage
        - run: ci/coverage_publish.sh
        - store_artifacts:
            path: /build/envoy/generated/coverage
