--- a/.bazelrc
+++ b/.bazelrc
@@ -1,4 +1,9 @@
 # Envoy specific Bazel build/test options.
+
+# Bazel doesn't need less than 200MB of memory based on memroy profiling:
+# https://docs.bazel.build/versions/master/skylark/performance.html#memory-profiling
+# Limiting JVM heapsize here to let it do GC more when approaching the limit to
+# leave room for compiler/linker.
 startup --host_jvm_args=-Xmx2048m
 build --workspace_status_command=bazel/get_workspace_status
 
