--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,6 @@
 # Envoy specific Bazel build/test options.
 
-# Bazel doesn't need less than 200MB of memory based on memroy profiling:
+# Bazel doesn't need more than 200MB of memory based on memory profiling:
 # https://docs.bazel.build/versions/master/skylark/performance.html#memory-profiling
 # Limiting JVM heapsize here to let it do GC more when approaching the limit to
 # leave room for compiler/linker.
