--- a/source/common/network/BUILD
+++ b/source/common/network/BUILD
@@ -104,9 +104,11 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "io_socket_handle_lib",
+    srcs = ["io_socket_handle_impl.cc"],
     hdrs = ["io_socket_handle_impl.h"],
     deps = [
         "//include/envoy/network:io_handle_interface",
+        "//source/common/api:os_sys_calls_lib",
         "//source/common/common:assert_lib",
     ],
 )
@@ -272,16 +274,5 @@ envoy_cc_library(
     deps = [
         "//include/envoy/stream_info:filter_state_interface",
         "//source/common/common:macros",
-    ],
-)
-
-envoy_cc_library(
-    name = "io_handle_lib",
-    srcs = ["io_handle_impl.cc"],
-    hdrs = ["io_handle_impl.h"],
-    deps = [
-        "//include/envoy/network:io_handle_interface",
-        "//source/common/api:os_sys_calls_lib",
-        "//source/common/common:assert_lib",
     ],
 )
