--- a/bazel/foreign_cc/BUILD
+++ b/bazel/foreign_cc/BUILD
@@ -11,6 +11,7 @@ cmake_external(
     cache_entries = {
         "CARES_SHARED": "no",
         "CARES_STATIC": "on",
+        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
     },
     cmake_options = ["-GNinja"],
     lib_source = "@com_github_c_ares_c_ares//:all",
@@ -27,6 +28,7 @@ cmake_external(
     cache_entries = {
         "EVENT__DISABLE_OPENSSL": "on",
         "EVENT__DISABLE_REGRESS": "on",
+        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
     },
     cmake_options = ["-GNinja"],
     lib_source = "@com_github_libevent_libevent//:all",
@@ -43,6 +45,7 @@ cmake_external(
     cache_entries = {
         "ENABLE_STATIC_LIB": "on",
         "ENABLE_LIB_ONLY": "on",
+        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
     },
     cmake_options = ["-GNinja"],
     lib_source = "@com_github_nghttp2_nghttp2//:all",
@@ -58,6 +61,7 @@ cmake_external(
     name = "yaml",
     cache_entries = {
         "YAML_CPP_BUILD_TESTS": "off",
+        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
     },
     cmake_options = ["-GNinja"],
     lib_source = "@com_github_jbeder_yaml_cpp//:all",
@@ -71,6 +75,9 @@ cmake_external(
 
 cmake_external(
     name = "zlib",
+    cache_entries = {
+        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
+    },
     cmake_options = ["-GNinja"],
     lib_source = "@com_github_madler_zlib//:all",
     make_commands = [
