circleci: docker: Enable for version tags
Signed-off-by: Jamie Hewland <jhewland@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,6 +197,9 @@ workflows:
               only: /^v.*/
       - docker:
           requires: [release]
+          filters:
+            tags:
+              only: /^v.*/
       - asan
       - tsan
       - compile_time_options
