--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,6 @@
 # Envoy specific Bazel build/test options.
 
-build --workspace_status_command=bazel/get_workspace_status
+build --workspace_status_command=bazel/get_workspace_status --experimental_remap_main_repo
 
 # Basic ASAN/UBSAN that works for gcc
 build:asan --define ENVOY_CONFIG_ASAN=1
@@ -53,4 +53,4 @@ build:libc++ --define force_libcpp=enabled
 build:libc++ --linkopt -fuse-ld=lld
 
 # Test options
-test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH
+test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH --experimental_remap_main_repo
