Add quic_sleep_impl.h to QUICHE platform implementation.
Signed-off-by: Bin Wu <wub@google.com>

--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -57,6 +57,7 @@ envoy_cc_library(
         "quic_map_util_impl.h",
         "quic_prefetch_impl.h",
         "quic_ptr_util_impl.h",
+        "quic_sleep_impl.h",
         "quic_string_impl.h",
         "quic_string_piece_impl.h",
         "quic_test_impl.h",
