--- a/source/common/filesystem/BUILD
+++ b/source/common/filesystem/BUILD
@@ -43,13 +43,19 @@ envoy_cc_library(
     srcs = ["filesystem_impl.cc"],
     hdrs = ["filesystem_impl.h"],
     deps = [
-        "//include/envoy/api:api_interface",
-        "//include/envoy/api:os_sys_calls_interface",
         "//include/envoy/event:dispatcher_interface",
         "//include/envoy/filesystem:filesystem_interface",
-        "//source/common/api:os_sys_calls_lib",
         "//source/common/buffer:buffer_lib",
         "//source/common/common:thread_lib",
+    ],
+)
+
+envoy_cc_library(
+    name = "raw_instance_lib",
+    srcs = ["raw_instance_impl.cc"],
+    hdrs = ["raw_instance_impl.h"],
+    deps = [
+        "//include/envoy/filesystem:filesystem_interface",
     ],
 )
 
