--- a/test/common/filesystem/BUILD
+++ b/test/common/filesystem/BUILD
@@ -12,20 +12,20 @@ envoy_cc_test(
     name = "filesystem_impl_test",
     srcs = ["filesystem_impl_test.cc"],
     deps = [
-        "//source/common/api:api_lib",
-        "//source/common/api:os_sys_calls_lib",
-        "//source/common/common:thread_lib",
-        "//source/common/event:dispatcher_includes",
-        "//source/common/event:dispatcher_lib",
         "//source/common/filesystem:filesystem_lib",
         "//source/common/stats:isolated_store_lib",
-        "//source/common/stats:stats_lib",
-        "//test/mocks/api:api_mocks",
         "//test/mocks/event:event_mocks",
         "//test/mocks/filesystem:filesystem_mocks",
         "//test/test_common:environment_lib",
-        "//test/test_common:threadsafe_singleton_injector_lib",
-        "//test/test_common:utility_lib",
+    ],
+)
+
+envoy_cc_test(
+    name = "raw_instance_impl_test",
+    srcs = ["raw_instance_impl_test.cc"],
+    deps = [
+        "//source/common/filesystem:raw_instance_lib",
+        "//test/test_common:environment_lib",
     ],
 )
 
