Add quic_uint128_impl.h to QUICHE platform implementation. (#5768)
Add quic_uint128_impl.h to QUICHE platform implementation

Risk Level: minimal: code not used yet
Testing: bazel test test/extensions/quic_listeners/quiche/platform:quic_platform_test
Docs Changes: none
Release Notes: none

Signed-off-by: Bin Wu <wub@google.com>

Signed-off-by: Bin Wu <46450037+wu-bin@users.noreply.github.com>

--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -55,6 +55,7 @@ envoy_cc_library(
         "quic_string_impl.h",
         "quic_string_piece_impl.h",
         "quic_string_utils_impl.h",
+        "quic_uint128_impl.h",
     ],
     external_deps = [
         "abseil_base",
