--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -159,6 +159,23 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
+    name = "protocol_integration_test",
+    srcs = [
+        "protocol_integration_test.cc",
+    ],
+    shard_count = 3,
+    deps = [
+        ":http_protocol_integration_lib",
+        "//source/common/http:header_map_lib",
+        "//source/extensions/filters/http/buffer:config",
+        "//source/extensions/filters/http/dynamo:config",
+        "//source/extensions/filters/http/health_check:config",
+        "//test/integration/filters:random_pause_filter_lib",
+        "//test/test_common:utility_lib",
+    ],
+)
+
+envoy_cc_test(
     name = "http2_upstream_integration_test",
     srcs = [
         "http2_upstream_integration_test.cc",
@@ -244,6 +261,7 @@ envoy_cc_test_library(
 envoy_cc_test(
     name = "idle_timeout_integration_test",
     srcs = ["idle_timeout_integration_test.cc"],
+    shard_count = 2,
     deps = [
         ":http_protocol_integration_lib",
         "//test/test_common:test_time_lib",
