--- a/source/common/common/BUILD
+++ b/source/common/common/BUILD
@@ -22,6 +22,13 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "recursion_checker_lib",
+    srcs = [],
+    hdrs = ["recursion_checker.h"],
+    deps = [":assert_lib"],
+)
+
+envoy_cc_library(
     name = "backoff_lib",
     srcs = ["backoff_strategy.cc"],
     hdrs = ["backoff_strategy.h"],
