--- a/test/common/upstream/BUILD
+++ b/test/common/upstream/BUILD
@@ -69,6 +69,7 @@ envoy_cc_test(
         "//test/mocks:common_lib",
         "//test/mocks/event:event_mocks",
         "//test/mocks/http:conn_pool_mocks",
+        "//test/test_common:utility_lib",
     ],
 )
 
