--- a/api/envoy/config/filter/http/grpc_http1_reverse_bridge/v2alpha1/BUILD
+++ b/api/envoy/config/filter/http/grpc_http1_reverse_bridge/v2alpha1/BUILD
@@ -1,4 +1,4 @@
-load("//bazel:api_build_system.bzl", "api_proto_library")
+load("@//api/bazel:api_build_system.bzl", "api_proto_library")
 
 licenses(["notice"])  # Apache 2
 
