--- a/api/envoy/service/auth/v2alpha/BUILD
+++ b/api/envoy/service/auth/v2alpha/BUILD
@@ -3,16 +3,6 @@ load("//bazel:api_build_system.bzl", "api_go_proto_library", "api_proto_library_
 licenses(["notice"])  # Apache 2
 
 api_proto_library_internal(
-    name = "attribute_context",
-    srcs = [
-        "attribute_context.proto",
-    ],
-    deps = [
-        "//envoy/api/v2/core:address",
-    ],
-)
-
-api_proto_library_internal(
     name = "external_auth",
     srcs = [
         "external_auth.proto",
@@ -21,6 +11,7 @@ api_proto_library_internal(
     deps = [
         ":attribute_context",
         "//envoy/api/v2/core:base",
+        "//envoy/service/v2/auth:attribute_context",
         "//envoy/type:http_status",
     ],
 )
