--- a/test/test_common/BUILD
+++ b/test/test_common/BUILD
@@ -162,6 +162,7 @@ envoy_cc_library(
     hdrs = ["test_base.h"],
     deps = [
         "//external:googletest",
+        "//source/common/common:assert_lib",
         "//test/test_common:global_lib",
     ],
 )
