std::__gcd isn't a thing on some platforms :(
Signed-off-by: Dan Rosen <mergeconflict@google.com>

--- a/test/common/common/BUILD
+++ b/test/common/common/BUILD
@@ -123,6 +123,14 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
+    name = "numeric_test",
+    srcs = ["numeric_test.cc"],
+    deps = [
+        "//source/common/common:numeric",
+    ],
+)
+
+envoy_cc_test(
     name = "utility_test",
     srcs = ["utility_test.cc"],
     external_deps = [
