--- a/source/common/common/BUILD
+++ b/source/common/common/BUILD
@@ -165,6 +165,11 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
+    name = "numeric",
+    hdrs = ["numeric.h"],
+)
+
+envoy_cc_library(
     name = "phantom",
     hdrs = ["phantom.h"],
 )
