Make clang-tidy and spelling checker happy.
Signed-off-by: Bin Wu <wub@google.com>

--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -54,13 +54,12 @@ envoy_cc_library(
         "quic_fallthrough_impl.h",
         "quic_flag_utils_impl.h",
         "quic_iovec_impl.h",
-        "quic_logging_impl.h",
         "quic_prefetch_impl.h",
         "quic_ptr_util_impl.h",
         "quic_string_impl.h",
         "quic_string_piece_impl.h",
         "quic_uint128_impl.h",
-    ],
+    ] + envoy_select_quiche(["quic_logging_impl.h"]),
     external_deps = [
         "abseil_base",
         "abseil_hash",
