--- a/test/extensions/transport_sockets/tls/crypto/BUILD
+++ b/test/extensions/transport_sockets/tls/crypto/BUILD
@@ -17,6 +17,6 @@ envoy_cc_test(
     deps = [
         "//source/common/buffer:buffer_lib",
         "//source/common/common:hex_lib",
-        "//source/common/crypto:utility_lib",
+        "//source/extensions/transport_sockets/tls/crypto:utility_lib",
     ],
 )
