--- a/test/test_common/BUILD
+++ b/test/test_common/BUILD
@@ -6,7 +6,7 @@ load(
     "envoy_cc_library",
     "envoy_cc_test",
     "envoy_cc_test_library",
-    "envoy_copts",
+    "envoy_cc_test_infrastructure_library",
     "envoy_package",
 )
 
@@ -157,14 +157,11 @@ envoy_cc_test(
     ],
 )
 
-envoy_basic_cc_library(
+envoy_cc_test_infrastructure_library(
     name = "test_base",
-    testonly = 1,
     srcs = ["test_base.cc"],
     hdrs = ["test_base.h"],
-    copts = envoy_copts(""),
     deps = [
-        "//external:googletest",
         "//test/test_common:global_lib",
     ],
 )
