--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -68,12 +68,17 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "quic_platform_impl_lib",
+    srcs = [
+        "quic_cert_utils_impl.cc",
+    ],
     hdrs = [
+        "quic_cert_utils_impl.h",
         "quic_mutex_impl.h",
     ],
     external_deps = [
         "quiche_quic_platform_base",
         "abseil_synchronization",
+        "ssl",
     ],
     visibility = ["//visibility:public"],
 )
