--- a/test/extensions/quic_listeners/quiche/platform/BUILD
+++ b/test/extensions/quic_listeners/quiche/platform/BUILD
@@ -24,8 +24,13 @@ envoy_cc_test(
 envoy_cc_test(
     name = "quic_platform_test",
     srcs = ["quic_platform_test.cc"],
+    data = [
+        #"//test/extensions/transport_sockets/tls/gen_unittest_certs.sh",
+        "//test/extensions/transport_sockets/tls/test_data:certs",
+    ],
     external_deps = ["quiche_quic_platform"],
     deps = [
+        "//test/extensions/transport_sockets/tls:ssl_test_utils",
         "//test/test_common:utility_lib",
     ],
 )
