--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -56,11 +56,13 @@ envoy_cc_library(
         "quic_iovec_impl.h",
         "quic_prefetch_impl.h",
         "quic_ptr_util_impl.h",
-        "quic_stack_trace_impl.h",
         "quic_string_impl.h",
         "quic_string_piece_impl.h",
         "quic_uint128_impl.h",
-    ] + envoy_select_quiche(["quic_logging_impl.h"]),
+    ] + envoy_select_quiche([
+        "quic_logging_impl.h",
+        "quic_stack_trace_impl.h",
+    ]),
     external_deps = [
         "abseil_base",
         "abseil_hash",
