attempting to fix clang-tidy issues
Signed-off-by: Michael Wozniak <wozz@koh.ms>

--- a/include/envoy/ssl/BUILD
+++ b/include/envoy/ssl/BUILD
@@ -11,6 +11,9 @@ envoy_package()
 envoy_cc_library(
     name = "connection_interface",
     hdrs = ["connection.h"],
+    deps = [
+        "//include/envoy/common:time_interface",
+    ],
 )
 
 envoy_cc_library(
