--- a/test/common/network/BUILD
+++ b/test/common/network/BUILD
@@ -72,6 +72,7 @@ envoy_cc_test(
         "//source/common/network:connection_lib",
         "//source/common/network:listen_socket_lib",
         "//source/common/network:utility_lib",
+        "//source/common/stats:stats_lib",
         "//test/mocks/buffer:buffer_mocks",
         "//test/mocks/event:event_mocks",
         "//test/mocks/network:network_mocks",
@@ -98,6 +99,7 @@ envoy_cc_test(
         "//source/common/network:dns_lib",
         "//source/common/network:filter_lib",
         "//source/common/network:listen_socket_lib",
+        "//source/common/stats:stats_lib",
         "//test/mocks/network:network_mocks",
         "//test/test_common:environment_lib",
         "//test/test_common:network_utility_lib",
@@ -165,6 +167,7 @@ envoy_cc_test(
         "//source/common/network:address_lib",
         "//source/common/network:listener_lib",
         "//source/common/network:utility_lib",
+        "//source/common/stats:stats_lib",
         "//test/common/network:listener_impl_test_base_lib",
         "//test/mocks/network:network_mocks",
         "//test/mocks/server:server_mocks",
@@ -182,6 +185,7 @@ envoy_cc_test(
         "//source/common/network:address_lib",
         "//source/common/network:listener_lib",
         "//source/common/network:utility_lib",
+        "//source/common/stats:stats_lib",
         "//test/common/network:listener_impl_test_base_lib",
         "//test/mocks/network:network_mocks",
         "//test/mocks/server:server_mocks",
