--- a/test/common/config/BUILD
+++ b/test/common/config/BUILD
@@ -194,6 +194,7 @@ envoy_cc_test(
         "//source/common/stats:stats_lib",
         "//test/mocks/grpc:grpc_mocks",
         "//test/mocks/local_info:local_info_mocks",
+        "//test/mocks/stats:stats_mocks",
         "//test/mocks/upstream:upstream_mocks",
         "//test/test_common:environment_lib",
         "//test/test_common:utility_lib",
