--- a/test/common/event/BUILD
+++ b/test/common/event/BUILD
@@ -15,6 +15,7 @@ envoy_cc_test(
         "//source/common/api:api_lib",
         "//source/common/event:dispatcher_includes",
         "//source/common/event:dispatcher_lib",
+        "//source/common/stats:isolated_store_lib",
         "//test/mocks:common_lib",
         "//test/test_common:utility_lib",
     ],
@@ -27,6 +28,7 @@ envoy_cc_test(
         "//include/envoy/event:file_event_interface",
         "//source/common/event:dispatcher_includes",
         "//source/common/event:dispatcher_lib",
+        "//source/common/stats:isolated_store_lib",
         "//test/mocks:common_lib",
         "//test/test_common:environment_lib",
         "//test/test_common:utility_lib",
