remove test_base as a special implicitly loaded infrastructure library. It can just be a normal library.
Signed-off-by: Joshua Marantz <jmarantz@google.com>

--- a/test/BUILD
+++ b/test/BUILD
@@ -32,6 +32,7 @@ envoy_cc_test_library(
         "//test/test_common:environment_lib",
         "//test/test_common:global_lib",
         "//test/test_common:printers_lib",
+        "//test/test_common:test_base_lib",
     ] + select({
         "//bazel:disable_signal_trace": [],
         "//conditions:default": ["//source/exe:sigaction_lib"],
