replace hot restart RPC proto with a protobuf-based one
Signed-off-by: Fred Douglas <fredlas@google.com>

--- a/source/server/BUILD
+++ b/source/server/BUILD
@@ -126,6 +126,7 @@ envoy_cc_library(
         "//source/common/network:utility_lib",
         "//source/common/stats:raw_stat_data_lib",
         "//source/common/stats:stats_options_lib",
+        "@envoy_api//envoy/admin/v2alpha:hot_restart_cc",
     ],
 )
 
