Use standalone cc_library(s) for quic_time_lib, quic_platform_sleep and quic_platform_sleep_impl_lib.
Signed-off-by: Bin Wu <wub@google.com>

--- a/source/extensions/quic_listeners/quiche/platform/BUILD
+++ b/source/extensions/quic_listeners/quiche/platform/BUILD
@@ -57,7 +57,6 @@ envoy_cc_library(
         "quic_map_util_impl.h",
         "quic_prefetch_impl.h",
         "quic_ptr_util_impl.h",
-        "quic_sleep_impl.h",
         "quic_string_impl.h",
         "quic_string_piece_impl.h",
         "quic_test_impl.h",
@@ -102,6 +101,15 @@ envoy_cc_library(
         "ssl",
     ],
     visibility = ["//visibility:public"],
+)
+
+envoy_cc_library(
+    name = "quic_platform_sleep_impl_lib",
+    hdrs = ["quic_sleep_impl.h"],
+    visibility = ["//visibility:public"],
+    deps = [
+        "@com_googlesource_quiche//:quic_time_lib",
+    ],
 )
 
 envoy_cc_library(
