In case of parse errors, consume rest of request properly; apply clang-tidy fixes
Signed-off-by: Adam Kotwasinski <adam.kotwasinski@gmail.com>

--- a/source/extensions/filters/network/kafka/BUILD
+++ b/source/extensions/filters/network/kafka/BUILD
@@ -83,6 +83,9 @@ envoy_cc_library(
     hdrs = [
         "message.h",
     ],
+    deps = [
+        "//include/envoy/buffer:buffer_interface",
+    ],
 )
 
 envoy_cc_library(
