Documentation: update documentation for Any (Struct deprecation).
Signed-off-by: Michael Payne <michael@sooper.org>

--- a/test/extensions/filters/network/mysql_proxy/mysql_test_config.yaml
+++ b/test/extensions/filters/network/mysql_proxy/mysql_test_config.yaml
@@ -25,6 +25,7 @@ static_resources:
             config:
               stat_prefix: mysql_stats
           - name: envoy.tcp_proxy
-            config:
+            typed_config:
+              "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
               stat_prefix: tcp_stats
               cluster: cluster_0
