[WiP] event: minimal reproducer using libevent for bug behind https://github.com/envoyproxy/envoy/pull/6042.
Signed-off-by: Harvey Tuch <htuch@google.com>

--- a/test/common/buffer/BUILD
+++ b/test/common/buffer/BUILD
@@ -59,6 +59,12 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
+    name = "event_buffer_test",
+    srcs = ["event_buffer_test.cc"],
+    external_deps = ["event"],
+)
+
+envoy_cc_test(
     name = "watermark_buffer_test",
     srcs = ["watermark_buffer_test.cc"],
     deps = [
