Updated comments and docs.
Signed-off-by: Henry Yang <hyang@lyft.com>

--- a/.bazelrc
+++ b/.bazelrc
@@ -55,4 +55,4 @@ build:libc++ --action_env=PATH
 build:libc++ --define force_libcpp=enabled
 
 # Test options
-test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH
+test --test_env=HEAPCHECK=normal --test_env=PPROF_PATH --strategy=Genrule=standalone --spawn_strategy=standalone
