--- a/include/envoy/filesystem/BUILD
+++ b/include/envoy/filesystem/BUILD
@@ -12,9 +12,9 @@ envoy_cc_library(
     name = "filesystem_interface",
     hdrs = ["filesystem.h"],
     deps = [
+        "//include/envoy/api:io_error_interface",
         "//include/envoy/api:os_sys_calls_interface",
         "//include/envoy/event:dispatcher_interface",
-        "//source/common/filesystem:io_file_error_lib",
     ],
 )
 
