update build so that test is visible
Signed-off-by: Nicolas Flacco <nflacco@lyft.com>

--- a/test/extensions/filters/network/common/redis/BUILD
+++ b/test/extensions/filters/network/common/redis/BUILD
@@ -7,7 +7,7 @@ load(
 )
 load(
     "//test/extensions:extensions_build_system.bzl",
-    "envoy_extension_cc_test",
+    "envoy_cc_test",
     "envoy_extension_cc_test_binary",
 )
 
@@ -23,10 +23,9 @@ envoy_cc_mock(
     ],
 )
 
-envoy_extension_cc_test(
+envoy_cc_test(
     name = "codec_impl_test",
     srcs = ["codec_impl_test.cc"],
-    extension_name = "envoy.filters.network.common.redis",
     deps = [
         "//source/common/buffer:buffer_lib",
         "//source/common/common:assert_lib",
