--- a/memcached_envoy.yaml
+++ b/memcached_envoy.yaml
@@ -17,41 +17,35 @@ static_resources:
           port_value: 8000
       filter_chains:
         - filters:
-            - name: envoy.filters.network.redis_proxy  # well_known_names.h 中定义
+            - name: envoy.filters.network.redis_proxy
               typed_config:
                 "@type": type.googleapis.com/envoy.extensions.filters.network.redis_proxy.v3.RedisProxy # pb 中定义
                 stat_prefix: redis-stat
                 settings:
-                  # TODO 在 filter config 中添加协议类型
-                  # backend: redis
+                  protocol: Memcached
                   op_timeout: 3s
                   enable_redirection: true
                   max_buffer_size_before_flush: 100000
-                  # enable_hashtagging: true
-                  # buffer_flush_timeout
-                  # max_upstream_unknown_connections
                 prefix_routes:
                   routes:
-                    - prefix: "a"
+                    - prefix: ""
                       cluster: mc_1
-                    - prefix: "b"
-                      cluster: mc_2
   clusters:
     - name: mc_1
       connect_timeout: 0.25s
-      load_assignment:
-        cluster_name: redis_0
-        endpoints:
-          - lb_endpoints:
-              - endpoint:
-                  address:
-                    socket_address: { address: 127.0.0.1, port_value: 32000 }
-    - name: mc_2
-      connect_timeout: 0.25s
-      load_assignment:
-        cluster_name: redis_0
-        endpoints:
-          - lb_endpoints:
-              - endpoint:
-                  address:
-                    socket_address: { address: 127.0.0.1, port_value: 33000 }
+      common_lb_config:
+        consistent_hashing_lb_config:
+          use_hostname_for_hashing: true
+      lb_policy: CLUSTER_PROVIDED
+      cluster_type:
+        name: envoy.clusters.twem
+        typed_config:
+          "@type": type.googleapis.com/google.protobuf.Struct
+          value:
+            cluster_refresh_rate: 60s
+            cluster_refresh_timeout: 5s
+            redirect_refresh_interval: 0s
+            redirect_refresh_threshold: 1
+      eds_cluster_config:
+        eds_config:
+          path: ./mc_endpoint.yaml
